<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="30sp"
            android:text="@string/look" />
        <Button
            android:id="@+id/button"
            android:layout_below="@id/headerTitle"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_below="@+id/headerTitle"
            android:layout_toEndOf="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check" />
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_alignParentStart="true"
            android:layout_below="@id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag" />
        <Switch
            android:id="@+id/switch1"
            android:layout_below="@id/checkBox"
            android:layout_toRightOf="@id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchText" />
        <EditText
            android:id="@+id/editText"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fill"
            android:inputType="textPersonName"/>
</RelativeLayout>